Added Fred Data functions

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,6 +1,6 @@
 [data]
-data_path = data/data_daily.csv
-split_ratio = 0.75
+data_path= 'data/data_daily.csv'
+split_ratio= 0.75
 
 [models]
-model_path = models/
+model_path= models/
