--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
-altair==4.2.2
 matplotlib==3.6.2
 numpy==1.23.5
 pandas==1.5.1
 pandas_datareader==0.10.0
+plotly==5.13.1
+holidays==0.24
 prophet==1.1.2
 scikit_learn==1.3.2
 statsmodels==0.13.2
+tensorflow==2.15.0
+streamlit==1.28.2
